--- a/src/index.css
+++ b/src/index.css
@@ -9,6 +9,10 @@ body {
     sans-serif;
   width: 100vw;
   overflow-x: hidden;
-  background-color: #f5f5f5;
   height: auto;
+}
+@layer {
+  body {
+    @apply bg-white dark:bg-gray-800;
+  }
 }
